--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <style>
     body {
       margin: 0;
+      background-color: #292a2d;
     }
 
     .loader-container {
@@ -62,6 +63,13 @@
 </head>
 
 <body>
+  <style>
+    body {
+      margin: 0;
+      background-color: #292a2d;
+    }
+  </style>
+
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
     <div class="loader-container">
